<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_width="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:scaleType="centerCrop"
                android:src="@drawable/main"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="65dp"
                android:layout_marginBottom="33dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/fbLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/login1"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="  connect_with_facebook" />

                <TextView
                    android:id="@+id/login1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/fbLogin"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/fbLogin"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="Login"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRegisterLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/fbLogin"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/fbLogin"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="26dp"
                    android:text="Register"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#455A64"
                android:gravity="center"
                android:orientation="vertical">

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="500dp"
                android:layout_height="50dp"
                android:layout_marginTop="23dp"
                android:scaleType="centerCrop"
                android:src="@drawable/step"
                android:layout_below="@+id/linearLayout2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>


    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
