...
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="18dp"
                    android:text="Step On Your Friends" />

                <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView"
...
                    android:layout_marginBottom="53dp"
                    app:layout_anchor="@+id/imageView"
                    app:layout_anchorGravity="center_vertical|center_horizontal" />
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="bottom|left"
...
