<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:src="@drawable/nature"/>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageToUpload"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/photo"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="4dp"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/white"
                    android:text="About Me" />
                <Button
                    android:id="@+id/bUploadImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#455A64"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|enterAlways">



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|enterAlways"
            android:background="#EEEEEE"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Switch
                android:text="Private Profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switch2" />
            <Switch
                android:text="Metric Unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switch3" />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name:" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name:" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Age:" />

            <EditText
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender:" />

            <EditText
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Height:" />

            <EditText
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weight:" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/black" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>