<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.airuser.soyf10.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:text="Tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonTutorial"
                tools:text="View Tutorial" />

            <Button
                android:text="View Profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profilesButton" />

            <Button
                android:text="Unlink from Facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/unlink" />

            <Button
                android:text="Logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logout" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
